Fixing the formatting of command-line examples on the Raspberry Pi Server pages. Previously, a "pre" tag was used to display such examples, but that prevented the text from wrapping on small screens and windows. Now, "code" and "br" tags are used instead.

--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ th.thborder{
 	font-weight: bold;
 }
 
-.term pre {
+.term div {
 	background: black;
 	color: lightgreen;
 	padding: 2px 10px;
